--- a/all.css
+++ b/all.css
@@ -1,3 +1,8 @@
+@import "./css/bootstrap-reboot.min.css";
+@import "./css/bootstrap.min.css";
+@import "./css/bootstrap-grid.min.css";
+@import "./css/bootstrap-utilities.min.css";
+
 .bg-primary-soft, .btn-primary-soft{
   background-color: rgba(51,94,234,.1);
   color: #335eea;
